# data-pipeline-async-ingest

./: CONTRIBUTING.md  Dockerfile  README.md  dataflow-run-pre-build.sh  dataflow-run.sh  direct-run.sh  main.py  pipeline_deployment.sh  pipeline_runner.sh  pipeline_test.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy-image.yml
pipeline/: launcher.py
pipeline/config/: beam_config.py  common.py  options.py
pipeline/config/app/: constants.py
pipeline/config/gcp/: constants.py
pipeline/config/gcp/bigquery/: table_registry.py
pipeline/transform/: generic_transforms.py
pipeline/utils/: common_functions.py  send_metrics.py
src/: __main__.py
src/config/: beam_config.py
